
	* scripts/Dpkg/Shlibs/SymbolFile.pm (merge_symbols): Do not update
	the deprecated version of a symbol if it is already marked
	deprecated.

2007-12-09  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Parse and dump properly
	new meta-information fields (on lines starting with an asterisk).
	Bugfix with alternate dependency handling that were not properly
	dumped.
	* scripts/t/200_Dpkg_Shlibs.t,
	scripts/t/200_Dpkg_Shlibs/symbols.fake-2: Add a test case to
	verify that meta-information fields and alternate dependencies are
	properly parsed and dumped.

2007-12-09  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Pass the current
	object as last parameter so that included files do not need to
	repeat the header line.
	* scripts/t/200_Dpkg_Shlibs/symbols.fake-1,
	scripts/t/200_Dpkg_Shlibs/symbols.include-1: Adjust some tests
	to also test inclusions with included files lacking a header line.

2007-12-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Doesn't warn any more about libm.so.6
	being unused if the binary is also linked against libstdc++ since
	g++ always add an implicit -lm.

2007-12-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs.pm (find_library): When it finds a library
	in a directory which is just a symlink to another directory that
	is also considered, remember the other directory name as the
	canonical one.
	* scripts/Dpkg/Path.pm: Add new function canonpath() and
	resolve_symlink().

2007-12-05  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-buildpackage.pl: Add new
	-A option (passed to dpkg-genchanges).
	* scripts/dpkg-genchanges.pl: Add new -A
	option that will include only arch-indep
	packages into the upload.

2007-12-05  Frank Lichtenheld  <djpig@debian.org>
	    Goswin von Brederlow  <brederlo@informatik.uni-tuebingen.de>
	    Bastian Blank  <waldi@debian.org>

	* scripts/dpkg-genchanges.pl: Support more