@@ -29,6 +29,10 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Tweak the sort algorithm between dependencies so that intervals
     are displayed as "a (>= 1), a (<< 2)" instead of the opposite.
     Closes: #455520
+  * Extend format of symbols files to support arbitrary fields of
+    meta-information. First field is Build-Depends-Package used to extract the
+    version requirement possibly encoded in the Build-Depends field and make
+    sure that the generated dependency is at least as strict as this one.
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
