@@ -6,6 +6,8 @@
 
 	* deb-symbols.5: Describe syntax of meta-information
 	fields and document the Build-Depends-Package field.
+	* dpkg-shlibdeps.1: Describe how the Build-Depends-Package field
+	of symbols file is used.
 
 2007-12-09  Raphael Hertzog  <hertzog@debian.org>
 
