@@ -44,11 +44,13 @@
 	* scripts/Dpkg/Shlibs/SymbolFile.pm: Parse and dump properly
 	new meta-information fields (on lines starting with an asterisk).
 	Bugfix with alternate dependency handling that were not properly
-	dumped.
+	dumped. New functions get_dependencies() and get_field().
 	* scripts/t/200_Dpkg_Shlibs.t,
 	scripts/t/200_Dpkg_Shlibs/symbols.fake-2: Add a test case to
 	verify that meta-information fields and alternate dependencies are
 	properly parsed and dumped.
+	* scripts/dpkg-shlibdeps.pl: Take into account the new
+	Build-Depends-Package field in symbols files.
 
 2007-12-09  Raphael Hertzog  <hertzog@debian.org>
 
